--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
 {%extends 'base.html'%}
 {%block content%}
-
+<div class="container">
+    <p>{{author}}</p>
+    <p>{{quote_message}}</p>
+</div>
 {%endblock%}
