--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -18,14 +18,19 @@
             </li>
         </ul>
     </div>
+    {%if current_user.is_authenticated%}
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Right</a>
+      <ul class="navbar-nav ml-auto">
+          <li class="nav-item" style="color: white">
+             <a href="/" class="nav-link">{{current_user.username|capitalize}} is signed in</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+            <li>
+              <a class="nav-link" href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a>
             </li>
-        </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('auth.logout')}}">Sign out {{current_user.username|capitalize}}</a>
+        </li>
+      </ul>
     </div>
+    {%endif%}
 </nav>
