--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -6,6 +6,7 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
+            <p class="text-center">{{ title }}</p>
             {{wtf.quick_form(registration_form)}}
         </div>
     </div>
