--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,12 +1,10 @@
 {% extends 'base.html'%}
-
 {% block content %}
 <div class="container">
     <div class="row">
         <!-- displaying  Username-->
         <div class="col-md-4">
             <h3> {{user.username| capitalize}} </h3>
-
             <!--Displaying user bio-->
             {% if user.bio %}
             <p> {{user.bio}}</p>
@@ -19,11 +17,17 @@
         </div>
         <!--Display profile photo-->
         <div class="col-md-4">
-
-            {% if user.profile_pic_path %}
+            {%if user.profile_pic_path%}
             <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail">
             {%else%}
-            <p>No profile picture</p>
+            <p>Profile picture not availabe</p>
+            {%endif%}
+
+            {%if user==current_user%}
+            <form action="{{url_for('main.update_pic',uname=user.username)}}" method="POST" enctype="multipart/form-data">
+                <input type="file" name="photo" class="form-control" required id="">
+                <input type="submit">
+            </form>
             {% endif %}
         </div>
         <div class="col-md-4">
