--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,8 @@
 {%extends 'base.html'%}
 {%block content%}
 <div class="container">
-    <p>{{author}}</p>
-    <p>{{quote_message}}</p>
+    <p class="text-center">{{title}}</p>
+    <p>{{quotes.author}}</p>
+    <p>{{quotes.quote}}</p>
 </div>
 {%endblock%}
