--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -5,7 +5,7 @@
                 <a class="nav-link" href="/">HOME</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Codeply</a>
+                <a class="nav-link" href="/new/blog/">NEW BLOG</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{url_for('auth.login')}}">Login</a>
