--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -7,7 +7,7 @@
             <p>Title: {{item.title}}</p>
                 <div class="card-body">
                     <p>Post: {{item.blog_content}}</p>
-                    <p class="text-muted"> Posted by: {{item.user.username}}</p>
+                    <p class="text-muted"> Posted by: {{item.user.username}} <br> On: {{item.posted_on}}</p>
                     <a href="{{url_for('main.new_comment',blog_id = item.id)}}"><button class="btn"><i
                                 class="fa fa-comments" style="font-size: 32px; color:turquoise">comment</i></button></a>
                 </div>
@@ -21,9 +21,9 @@
 {% endmacro %}
 
 
-{% macro displayComment(comments) %}
-<ul> {% if comments %}
-    {% for comment in comments %}
+{% macro displayComment(all_comments) %}
+<ul> {% if all_comments %}
+    {% for comment in all_comments %}
     <div class="row text-center">
         <p>{{ comment.description }}</p>
         Posted by: {{comment.user.username}}
