--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,22 +1,6 @@
 {% macro display(blog) %}
-<div class="row">
-    {% if blog %}
-    {% for item in blog %}
-    <div class="col-md-6">
-        <div class="card shadow p-3 mb-5 bg-white rounded">
-            <p>Title: {{item.title}}</p>
-                <div class="card-body">
-                    <p>Post: {{item.blog_content}}</p>
-                    <p class="text-muted"> Posted by: {{item.user.username}} <br> On: {{item.posted_on}}</p>
-                    <a href="{{url_for('main.new_comment',blog_id = item.id)}}"><button class="btn"><i
-                                class="fa fa-comments" style="font-size: 32px; color:turquoise">comment</button></a>
-                </div>
-        </div>
-    </div>
-    {% endfor %}
-    {% else %}
-    <p>No blogs have been posted yet!</p>
-    {% endif %}
+<div class=" container-fluid row">
+    
 </div>
 {% endmacro %}
 
