--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -11,7 +11,7 @@
                 {{ message }}
             </div>
             {%endfor%}
-            {{wtf.quick_form(login_form)}}
+            {{wtf.quick_form(login_form,button_map={'submit':'success'})}}
             <p>Don't have an account? <a href="{{url_for('auth.register')}}">Sign up</a>here</p>
         </div>
     </div>
