--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -7,7 +7,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
             <p class="text-center">{{ title }}</p>
-            {{wtf.quick_form(registration_form)}}
+            {{wtf.quick_form(registration_form,button_map={'submit':'success'})}}
         </div>
     </div>
 </div>
