--- a/app/templates/comments.html
+++ b/app/templates/comments.html
@@ -8,8 +8,16 @@
             {{wtf.quick_form(form,button_map={'submit':'primary'})}}
         </div>
         <div class="col-6">
-            <h4>Comments</h4>
-            {{ macro.displayComment(comment) }}
+            {%if comments%}
+            {%for comment in comments%}
+            <p>{{comment.description}}</p>
+            <p class="text-muted">By: {{comment.user.username}}</p>
+            <a href=""><i class="fa fa-trash" style="color: red;font-size: 40px;" ></i></a>
+            {%endfor%}
+            {%else%}
+            <h4>This post doesn't have any comments yet!</h4>
+            {%endif%}
+            
         </div>
     </div>
 </div>
